Updated Code and readme

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <!-- Next Hour -->
             <div class="row border-top border-bottom input-row" id="row4">
-                <div class="col-md-1" id="hour4">12 AM</div>
+                <div class="col-md-1" id="hour4">12 PM</div>
                    <textarea rows="3" id="text-area4" class="col-md-10"></textarea>
                    <button id="saveBtn" class="col-md-1"><i class="far fa-save"></i></button>
             </div>
@@ -91,6 +91,7 @@
         </footer>
       </div>
 <!-- Links Java, jQUery & Moments.js -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="./assests/script.js"></script>
